fix footer on mobile

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,5 +1,5 @@
 .footer {
-  height: 100px;
+  height: auto;
   background-color: var(--main-red);
   width: 100%;
   font-size: 1rem;
@@ -8,4 +8,11 @@
 
 .footer ul {
   list-style: none;
+}
+
+
+@media only screen and (max-width: 700px) {
+  .footer {
+    font-size: .75rem;
+  }
 }
